preview about templates

--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -1,2 +1,7 @@
-<p>cursos Components!</p>
+<p>Lista de Cursos do portal {{ nomeDoPortal }}</p>
+
+<ul>
+  <li *ngFor="let cursos of listaDeCursos">{{ cursos }}</li>
+</ul>
+
 <app-curso-detalhe></app-curso-detalhe>
