feat: input property

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -77,5 +77,7 @@
 <section>
   <h2 class="fontzero">Data Binding</h2>
 
-  <app-meu-form></app-meu-form>
+  <!-- <app-meu-form></app-meu-form> -->
+
+  <app-input-property [nome]="nomeDoCurso"></app-input-property>
 </section>
