feat: interpolation intro

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,9 +1,7 @@
 <!-- <section>
   <h2 class="fontzero">Interpolation</h2>
-  <article>
-    <h3>Interpolação</h3>
-    <p>String renderizada com interpolação {{ url }}</p>
-  </article>
+
+  <app-interpolation></app-interpolation>
 
   <article>
     <h3>Property Binding</h3>
