feat: accessing the DOM with #ViewChild

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -33,4 +33,6 @@
   <app-output-property [valor]="valorInicial"
   (mudouValor)="onMudouValor($event)"
   ></app-output-property>
+
+<app-ciclo></app-ciclo>
 </section>
