style: following ng lint best pratice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <span>{{ title }} app is running!</span>
-<meu-primeiro-component></meu-primeiro-component>
+<app-primeiro-component></app-primeiro-component>
 
 <app-cursos></app-cursos>
 
