--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -28,11 +28,12 @@
 
   <!-- <app-meu-form></app-meu-form> -->
 
-  <!-- <app-input-property [nome]="nomeDoCurso"></app-input-property> -->
+  <app-input-property [portalCurso]="nomeDoCurso"></app-input-property>
 
-  <app-output-property [valor]="valorInicial"
-  (mudouValor)="onMudouValor($event)"
+  <app-output-property
+    [valor]="valorInicial"
+    (mudouValor)="onMudouValor($event)"
   ></app-output-property>
 
-<app-ciclo></app-ciclo>
+  <app-ciclo></app-ciclo>
 </section>
