--- a/src/app/data-binding/input-property/input-property.component.html
+++ b/src/app/data-binding/input-property/input-property.component.html
@@ -2,6 +2,6 @@
   <h3>Input/output Property</h3>
 
   <div>
-    <p>Texto de exemplo: {{ nomeCurso }}</p>
+    <p>Texto de exemplo: {{ portalCurso }}</p>
   </div>
 </article>
