feat: intro of directive NgIf

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<span>{{ title }} app is running!</span>
+<!-- <span>{{ title }} app is running!</span>
 <app-primeiro-component></app-primeiro-component>
 
 <app-cursos></app-cursos>
 
-<app-data-binding></app-data-binding>
+<app-data-binding></app-data-binding> -->
 
+<app-diretivas></app-diretivas>
 <router-outlet></router-outlet>
