--- a/src/app/diretivas/diretivas.component.html
+++ b/src/app/diretivas/diretivas.component.html
@@ -1,1 +1,4 @@
-<app-diretiva-ngif></app-diretiva-ngif>
+<!-- <app-diretiva-ngif></app-diretiva-ngif> -->
+
+<app-diretiva-ngswitch></app-diretiva-ngswitch>
+<app-diretiva-ng-for></app-diretiva-ng-for>
